// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ngac Permission Tests prepare Ngac environment should create Org2MSP attribute 1`] = `
Array [
  Object {
    "key": "mspid",
    "type": "1",
    "value": "Org2MSP",
  },
]
`;

exports[`Ngac Permission Tests prepare Ngac environment should create policy 1`] = `
Object {
  "allowedEvents": Array [
    "DocCreated",
  ],
  "attributes": Object {
    "uri": "model/Org2MSP/doc",
  },
  "condition": Object {
    "hasList": Object {
      "createDoc": "creator_id",
    },
  },
  "effect": "Allow",
  "policyClass": "ngac-pe-policy",
  "sid": "allowCreateDoc",
}
`;

exports[`Ngac Permission Tests prepare Ngac environment should create resource attributes for entityName 1`] = `
Array [
  Object {
    "key": "createDoc",
    "type": "1",
    "value": "Org2MSP::Admin@org2.example.com",
  },
]
`;
